Online chat which use objects